--- a/.classpath
+++ b/.classpath
@@ -2,12 +2,12 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
-	<classpathentry kind="lib" path="D:/Dhruv Phansalkar/Junit-Log4j Jar Files/classes12.jar"/>
-	<classpathentry kind="lib" path="D:/Dhruv Phansalkar/Junit-Log4j Jar Files/easymock-2.5.jar"/>
-	<classpathentry kind="lib" path="D:/Dhruv Phansalkar/Junit-Log4j Jar Files/junit-4.4.jar"/>
-	<classpathentry kind="lib" path="D:/Dhruv Phansalkar/Junit-Log4j Jar Files/log4j-1.2.9.jar"/>
-	<classpathentry kind="lib" path="D:/Dhruv Phansalkar/Junit-Log4j Jar Files/ojdbc5.jar"/>
-	<classpathentry kind="lib" path="D:/Dhruv Phansalkar/Junit-Log4j Jar Files/ojdbc6.jar"/>
-	<classpathentry kind="lib" path="D:/Dhruv Phansalkar/Junit-Log4j Jar Files/ojdbc6_g.jar"/>
+	<classpathentry kind="lib" path="D:/Users/ADM-IG-HWDLAB1B/Desktop/Junit-Log4j Jar Files/classes12.jar"/>
+	<classpathentry kind="lib" path="D:/Users/ADM-IG-HWDLAB1B/Desktop/Junit-Log4j Jar Files/easymock-2.5.jar"/>
+	<classpathentry kind="lib" path="D:/Users/ADM-IG-HWDLAB1B/Desktop/Junit-Log4j Jar Files/junit-4.4.jar"/>
+	<classpathentry kind="lib" path="D:/Users/ADM-IG-HWDLAB1B/Desktop/Junit-Log4j Jar Files/log4j-1.2.9.jar"/>
+	<classpathentry kind="lib" path="D:/Users/ADM-IG-HWDLAB1B/Desktop/Junit-Log4j Jar Files/ojdbc5.jar"/>
+	<classpathentry kind="lib" path="D:/Users/ADM-IG-HWDLAB1B/Desktop/Junit-Log4j Jar Files/ojdbc6.jar"/>
+	<classpathentry kind="lib" path="D:/Users/ADM-IG-HWDLAB1B/Desktop/Junit-Log4j Jar Files/ojdbc6_g.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
